updated styles, removed mobile bottomnav component, separated firebase config into own file, fixed rendering on IE

--- a/src/app/components/floatingcart/floatingcart.component.css
+++ b/src/app/components/floatingcart/floatingcart.component.css
@@ -4,6 +4,7 @@
   left: 50%;
   z-index: 20;
   transform: translateX(-50%);
+  max-width: 100%;
 }
 
 .floatingCartContainer {
